# rust_portfolio_api

./: .dev.env  .env  .gitignore  .jwt.private.key  :w  Cargo.toml  Dockerfile  Dockerfile.api  README.md  diesel_startup.sh  docker-compose.yml  rust_portfolio_api.postman_collection.json  update_api.sh
migrations/2023-09-01-005936_init_schema/: up.sql
scripts/: sql_dev_setup.sql
sql/: init_schema.sql
src/: .jwt.private.key  connection_pool.rs  controller.rs  controllers.rs  infrastructure.rs  jwt.rs  lib.rs  main.rs  middleware.rs  model.rs  presentation.rs  schema.rs
src/controller/: auth.rs  blog.rs  blog_controller.rs  generic_handler.rs  server_check.rs  test.rs
src/controller/crud/: http_method.rs
src/controllers/: test.rs
src/infrastructure/: api_error.rs  database.rs  env_setup.rs  jwt.rs
src/infrastructure/middleware/: jwt_middleware.rs
src/middleware/: .jwt.private.key  jwt_validation.rs
src/model/: blog_model.rs  jwt_model.rs  query.rs
src/presentation/: blog_presentation.rs  health_check_presentation.rs
