[package]
name = "rust_portfolio_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
dotenv = "0.15.0"
envy = "0.4.2"
mysql = "23.0.1"
once_cell = "1.17.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0"
