[package]
name = "portfolio_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.171", features = ["derive"] }
dotenv = "0.15.0"
envy = "0.4.2"
diesel = { version = "2.1.1", features = ["chrono"] }
diesel-async = { version = "0.3.2", features = ["mysql", "deadpool"] }
derive_more = "0.99.17"
chrono = { version = "0.4.28", features = ["serde"] }
futures-util = "0.3.28"
jwt-simple = "0.11.6"
